--- a/rc/.xmobarrc
+++ b/rc/.xmobarrc
@@ -10,9 +10,9 @@ Config { font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*"
                     , Run Swap [] 10
                     , Run Date "%a %b %_d %Y %H:%M" "date" 10
                     , Run StdinReader
-                    , Run Network "em1" ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
+                    , Run Network "eno1" ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %em1% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc> "
+       , template = "%StdinReader% }{ %eno1% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc> "
        }
