--- a/rc/.xmobarrc
+++ b/rc/.xmobarrc
@@ -3,7 +3,8 @@ Config { font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*"
        , border = TopB
        , bgColor = "black"
        , fgColor = "grey"
-       , position = TopSize L 90 22
+       , position = Static { xpos = 0 , ypos = 0, width = 1728, height = 22 }
+       , allDesktops = False
        , lowerOnStart = True
        , commands = [ Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
