--- a/rc/.xmobarrc
+++ b/rc/.xmobarrc
@@ -10,9 +10,9 @@ Config { font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*"
                     , Run Swap [] 10
                     , Run Date "%a %b %_d %Y %H:%M" "date" 10
                     , Run StdinReader
-                    , Run Volume "default" "Master" [] 10
-                    , Run Network "wlp3s0" ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
-                    , Run BatteryP ["BAT1"]
+                    --, Run Volume "default" "Master" [] 10
+                    , Run Network "enp1s0f0" ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
+                    , Run BatteryP ["BAT0"]
                                    ["-t", "Bat: <left>%(<acstatus>)"
                                    , "-L", "10", "-H", "80"
                                    , "-l", "red", "-h", "green"
@@ -20,5 +20,5 @@ Config { font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*"
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %default:Master% | %wlp3s0% | %cpu% | %memory% * %swap% * %battery% | <fc=#ee9a00>%date%</fc> "
+       , template = "%StdinReader% }{ %enp1s0f0% | %cpu% | %memory% * %swap% * %battery% | <fc=#ee9a00>%date%</fc> "
        }
