NICTA workstation stuff

--- a/rc/.xmobarrc
+++ b/rc/.xmobarrc
@@ -9,11 +9,12 @@ Config { font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*"
        , commands = [ Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
-                    , Run Date "%a %b %_d %Y %H:%M" "date" 10
+                    , Run DateZone "%a %b %_d %Y %H:%M" "en_AU.UTF-8" "Australia/Sydney" "date" 10
+                    , Run DateZone "%H:%M" "es_CO.UTF-8" "America/Bogota" "col_time" 10
                     , Run StdinReader
-                    , Run Network "eno1" ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
+                    , Run Network "enp0s31f6" ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %eno1% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc> "
+       , template = "%StdinReader% }{ %enp0s31f6% | %cpu% | %memory% * %swap% | <fc=#ee9a00>%date%</fc> (%col_time%)"
        }
