--- a/rc/.xmobarrc
+++ b/rc/.xmobarrc
@@ -1,9 +1,9 @@
-Config { font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*"
+Config { font = "xft:DejaVu Sans Mono:size=11"
        , borderColor = "black"
        , border = TopB
        , bgColor = "black"
        , fgColor = "grey"
-       , position = Static { xpos = 1200, ypos = 312, width = 1728, height = 22 }
+       , position = Static { xpos = 0, ypos = 0, width = 1728, height = 22 }
        , allDesktops = False
        , lowerOnStart = True
        , commands = [ Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
@@ -13,9 +13,16 @@ Config { font = "-misc-fixed-*-*-*-*-13-*-*-*-*-*"
                     , Run DateZone "%H:%M" "es_CO.UTF-8" "America/Bogota" "col_time" 10
                     , Run Kbd [("us(intl)", "US-INT"), ("us", "US")]
                     , Run StdinReader
-                    , Run Network "enp0s31f6" ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
+                    , Run DateZone "%H:%M" "es_CO.UTF-8" "America/Bogota" "col_time" 10
+                    , Run Network "wlp58s0" ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
+                    , Run Kbd [("us(intl)", "US-INT"), ("us", "US")]
+                    , Run BatteryP ["BAT0"]
+                                   ["-t", "Bat: <left>%(<acstatus>)"
+                                   , "-L", "10", "-H", "80"
+                                   , "-l", "red", "-h", "green"
+                                   ] 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %enp0s31f6% | %cpu% | %memory% * %swap% | [%kbd%] <fc=#ee9a00>%date%</fc> (%col_time%)"
+       , template = "%StdinReader% }{ %wlp58s0% | %cpu% |  %memory% * %swap% * %battery% | [%kbd%] <fc=#ee9a00>%date%</fc> (%col_time%)"
        }
