--- a/rc/.xmobarrc
+++ b/rc/.xmobarrc
@@ -26,5 +26,5 @@ Config { font = "xft:DejaVu Sans Mono:size=11"
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %enp0s31f6%%wlp58s0% | %cpu% | %memory% * %swap% | [%kbd%] <fc=#ee9a00>%date%</fc> (%col%)-(%swe%)"
+       , template = "%StdinReader% }{ %wlp58s0% | %cpu% | %memory% * %swap% * %battery% | [%kbd%] <fc=#ee9a00>%date%</fc> (%col%)-(%swe%)"
        }
