--- a/rc/.gitconfig
+++ b/rc/.gitconfig
@@ -10,9 +10,10 @@
 [merge]
         tool = emerge
 [core]
-        editor = ec
+        editor = nano
 [alias]
         nicta    = config user.email alejadro.gomez@data61.csiro.au
         personal = config user.email alegomez544@gmail.com
+        fpush    = push --force-with-lease
         co       = checkout
         ci       = commit
