Add support for SML files and some tweaks

--- a/rc/.gitconfig
+++ b/rc/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-        email = alejandro.gomez@data61.csiro.au
+        email = alegomez544@gmail.com
         name  = Alejandro Gomez-Londono
 [init]
         templatedir = ~/.conf/git-templates/
