Add simple teaks and improvements to various files

--- a/rc/.gitconfig
+++ b/rc/.gitconfig
@@ -17,3 +17,4 @@
         fpush    = push --force-with-lease
         co       = checkout
         ci       = commit
+        update   = fetch --all
