Add minor changes
  * New git alias purge for cleaning directories
  * Swap times zones to match new location (SE)

--- a/rc/.gitconfig
+++ b/rc/.gitconfig
@@ -15,6 +15,7 @@
         nicta    = config user.email alejadro.gomez@data61.csiro.au
         personal = config user.email alegomez544@gmail.com
         fpush    = push --force-with-lease
+        purge    = clean -fdX
         co       = checkout
         ci       = commit
         update   = fetch --all
