--- a/rc/.xmobarrc
+++ b/rc/.xmobarrc
@@ -9,9 +9,9 @@ Config { font = "xft:DejaVu Sans Mono:size=11"
        , commands = [ Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
-                    , Run DateZone "%a %D %H:%M" "en_AU.UTF-8" "Australia/Sydney" "date" 10
+                    , Run DateZone "%a %D %H:%M" "en_AU.UTF-8"  "Europe/Stockholm" "date" 10
                     , Run DateZone "%H" "es_CO.UTF-8" "America/Bogota" "col" 10
-                    , Run DateZone "%H" "se_SE.UTF-8" "Europe/Stockholm" "swe" 10
+                    , Run DateZone "%H" "se_SE.UTF-8" "Australia/Sydney" "swe" 10
                     , Run Kbd [("us(intl)", "US-INT"), ("us", "US")]
                     , Run StdinReader
                     , Run DateZone "%H:%M" "es_CO.UTF-8" "America/Bogota" "col_time" 10
