Add some improvements for the home computer

--- a/rc/.xmobarrc
+++ b/rc/.xmobarrc
@@ -1,4 +1,4 @@
-Config { font = "DejaVu Sans Mono for Powerline Nerd Font Complete Mono:size=13"
+Config { font = "xft:DejaVuSansMonoForPowerline Nerd Font:size=12"
        , borderColor = "black"
        , border = TopB
        , bgColor = "black"
@@ -9,12 +9,7 @@ Config { font = "DejaVu Sans Mono for Powerline Nerd Font Complete Mono:size=13"
        , commands = [ Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
-                    , Run DateZone "%a %D %H:%M" "en_AU.UTF-8"  "Europe/Stockholm" "date" 10
-                    , Run DateZone "%H" "es_CO.UTF-8" "America/Bogota" "col" 10
-                    , Run DateZone "%H" "se_SE.UTF-8" "Australia/Sydney" "swe" 10
-                    , Run Kbd [("us(intl)", "US-INT"), ("us", "US")]
                     , Run StdinReader
-                    , Run DateZone "%H:%M" "es_CO.UTF-8" "America/Bogota" "col_time" 10
                     , Run DynNetwork ["-t", "Net(<dev>): <rx>Kb/<tx>Kb" ,"-L","0","-H","550","--normal","green","--high","red"] 10
                     , Run Kbd [("us(intl)", "US-INT"), ("us", "US")]
                     , Run BatteryP ["BAT0"]
