--- a/rc/.gitconfig
+++ b/rc/.gitconfig
@@ -19,8 +19,9 @@
         cleaner  = clean -fdX
         mfetch   = submodule foreach "git fetch --all"
         mcleaner = submodule foreach "git cleaner"
-	mlog     = submodule foreach "git --no-pager lg -n 3"
-	miss     = lg ^HEAD
+        mlog     = submodule foreach "git --no-pager lg -n 3"
+        miss     = lg ^HEAD
+        st       = status -sb
         co       = checkout
         ci       = commit
         lg       = log --date=short --pretty=tformat:'[%C(bold cyan)%h%Creset] - (%C(bold green)%ad%Creset) %s %C(dim white)- %cN%Creset%C(auto)%d%Creset'
