Add new git alias for deep cleaning a repo

--- a/rc/.gitconfig
+++ b/rc/.gitconfig
@@ -13,18 +13,20 @@
 [core]
         editor = nano
 [alias]
-        fpush    = push --force-with-lease
-        mupdate  = submodule update
-        msync    = submodule sync
-        cleaner  = clean -fdX
-        mfetch   = submodule foreach "git fetch --all"
-        mcleaner = submodule foreach "git cleaner"
-        mlog     = submodule foreach "git --no-pager lg -n 3"
-        miss     = lg ^HEAD
-        st       = status -sb
-        co       = checkout
-        ci       = commit
-        lg       = log --date=short --pretty=tformat:'[%C(bold cyan)%h%Creset] - (%C(bold green)%ad%Creset) %s %C(dim white)- %cN%Creset%C(auto)%d%Creset'
+        fpush     = push --force-with-lease
+        mupdate   = submodule update
+        msync     = submodule sync
+        cleaner   = clean -fdX
+        cleanest  = clean -fdx
+        mfetch    = submodule foreach "git fetch --all"
+        mcleaner  = submodule foreach "git cleaner"
+        mcleanest = submodule foreach "git cleanest"
+        mlog      = submodule foreach "git --no-pager lg -n 3"
+        miss      = lg ^HEAD
+        st        = status -sb
+        co        = checkout
+        ci        = commit
+        lg        = log --date=short --pretty=tformat:'[%C(bold cyan)%h%Creset] - (%C(bold green)%ad%Creset) %s %C(dim white)- %cN%Creset%C(auto)%d%Creset'
         update   = fetch --all
 [pull]
         ff = only
