--- a/rc/.config/powerline/config.json
+++ b/rc/.config/powerline/config.json
@@ -1,7 +1,7 @@
 {
         "common": {
             "term_truecolor": true,
-            "log_file" : "/home/agomezl/pl.log"
+            "log_file" : "~/pl.log"
         },
         "ext": {
                 "shell": {
